Fix Quote author alignement

--- a/css/styles.css
+++ b/css/styles.css
@@ -149,4 +149,6 @@ h2 {
     font-style: normal;
     font-weight: 700;
     margin-top: 16px;
+    width: fit-content;
+    margin-left: auto;
 }
